# crewai_customer_ticket_support_system

./: README.md  api.py  app.py  notes.txt  pyproject.toml  requirements.txt
src/Callbacks/: task_callbacks.py
src/Guardrails/: task_guardrial.py
src/Schema/: schemas.py
src/customer_ticket_system/: main.py  main_crew.py
src/customer_ticket_system/config/: agents.yaml  tasks.yaml
